--- a/index.org
+++ b/index.org
@@ -88,8 +88,8 @@ Actually generate the section:
 - Upcoming events:
   - [[https://lists.gnu.org/archive/html/emacsconf-discuss/2021-11/msg00000.html][EmacsConf 2021: Schedule, & How to Watch and Participate]] ([[https://www.reddit.com/r/emacs/comments/qyq6tm/emacsconf_2021_schedule_how_to_watch_and/][Reddit]])
   - Emacs Berlin (virtual, in English) https://emacs-berlin.org/ Wed Nov 24 0930 Vancouver / 1130 Chicago / 1230 Toronto / 1730 GMT / 1830 Berlin / 2300 Kolkata -- Thu Nov 25 0130 Singapore
-  - Emacs Conf https://emacsconf.org/2021 Sat Nov 27 0500 Vancouver / 0700 Chicago / 0800 Toronto / 1300 GMT / 1400 Berlin / 1830 Kolkata / 2100 Singapore
-  - Emacs Conf https://emacsconf.org/2021 Sun Nov 28 0500 Vancouver / 0700 Chicago / 0800 Toronto / 1300 GMT / 1400 Berlin / 1830 Kolkata / 2100 Singapore
+  - EmacsConf https://emacsconf.org/2021 Sat Nov 27 0600 Vancouver / 0800 Chicago / 0900 Toronto / 1400 GMT / 1500 Berlin / 1930 Kolkata / 2200 Singapore
+  - EmacsConf https://emacsconf.org/2021 Sun Nov 28 0600 Vancouver / 0800 Chicago / 0900 Toronto / 1400 GMT / 1500 Berlin / 1930 Kolkata / 2200
   - EmacsATX: TBD https://www.meetup.com/EmacsATX/events/281742622/ Wed Dec 1 1630 Vancouver / 1830 Chicago / 1930 Toronto -- Thu Dec 2 0030 GMT / 0130 Berlin / 0600 Kolkata / 0830 Singapore
   - M-x Research (contact them for password): TBA https://m-x-research.github.io/ Fri Dec 3 0700 Vancouver / 0900 Chicago / 1000 Toronto / 1500 GMT / 1600 Berlin / 2030 Kolkata / 2300 Singapore
 - Emacs configuration:
